<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.neighbour_list.DetailNeighbourWithCoordinatorLayoutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/view_frame"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/v_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray">
            </ImageView>

            <TextView
                android:id="@+id/v_name_general"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginBottom="20dp"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:layout_gravity="bottom"
                android:text="Caroline">
            </TextView>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </android.support.v7.widget.Toolbar>

        </FrameLayout>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:background="@android:color/holo_blue_dark"
            android:layout_weight="0.56"
            app:cardCornerRadius="10dp"
            android:layout_margin="10dp"
            android:layout_height="100dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/v_name_secondary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_margin="15dp"
                    android:textStyle="bold"
                    android:text="Caroline">

                </TextView>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical|left">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_margin="5dp"
                        android:src="@drawable/ic_location_24"
                        >

                    </ImageView>

                    <TextView
                        android:id="@+id/address"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="06 77 36 052 65">

                    </TextView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical|left">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_margin="5dp"
                        android:src="@drawable/ic_phone_24"
                        >

                    </ImageView>

                    <TextView
                        android:id="@+id/myphone_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="06 77 36 052 65">

                    </TextView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:orientation="horizontal"
                    android:gravity="center_vertical|left">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_margin="5dp"
                        android:src="@drawable/ic_network_24"
                        >

                    </ImageView>

                    <TextView
                        android:id="@+id/v_network_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="06 77 36 052 65">
                    </TextView>

                </LinearLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="0.5"
            android:layout_marginEnd="100dp"
            app:cardCornerRadius="10dp"

            android:background="@android:color/holo_green_dark"
            android:layout_height="100dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:layout_margin="10dp"
                    android:text="A propos de moi">
                </TextView>

                <TextView
                    android:id="@+id/myText_view"
                    android:layout_width="match_parent"
                    android:layout_margin="10dp"
                    android:layout_marginTop="100dp"
                    android:text="demo"
                    android:layout_height="wrap_content">

                </TextView>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/float_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="#FCFFFFFF"
        app:layout_anchor="@id/view_frame"
        android:layout_margin="10dp"
       app:layout_anchorGravity="bottom|right"
        >

    </android.support.design.widget.FloatingActionButton>


</android.support.design.widget.CoordinatorLayout>